# indicator-power

./: .bzrignore  CMakeLists.txt  Makefile.am  configure.ac
data/: CMakeLists.txt  com.canonical.indicator.power.gschema.xml.in  indicator-power.conf.in  indicator-power.service.in
debian/: changelog  control  indicator-power.links  indicator-power.maintscript  rules
po/: indicator-power.pot
src/: CMakeLists.txt  device.c  indicator-power.c  main.c  notifier.c  service.c  service.h  sound-player-gst.c
test/: test-gtest.cpp
tests/: CMakeLists.txt  dbus-fixture.h  glib-fixture.h  start-mock-notifications.py  test-dbus-fixture.h  test-device.cc  test-notify.cc
