ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}

SUBDIRS = \
	po \
	data


###################
# Indicator Stuff
###################

powerlibdir = $(INDICATORDIR)
powerlib_LTLIBRARIES = libpower.la
libpower_la_SOURCES = \
        src/indicator-power.c
libpower_la_CFLAGS = \
        $(UPOWER_CFLAGS) \
        $(INDICATOR_CFLAGS) \
		$(COVERAGE_CFLAGS) \
        -Wall -Werror \
        -DG_LOG_DOMAIN=\"Indicator-Power\"
libpower_la_LIBADD = \
        $(UPOWER_LIBS) \
        $(INDICATOR_LIBS)
libpower_la_LDFLAGS = \
		$(COVERAGE_LDFLAGS) \
        -module \
        -avoid-version


###################
# TESTS
###################

check_LIBRARIES = libgtest.a
check_PROGRAMS = test-gtest

TESTS =

AM_CPPFLAGS = $(GTEST_CPPFLAGS) \
	-I${top_srcdir}/src

nodist_libgtest_a_SOURCES = $(GTEST_SOURCE)/src/gtest-all.cc
libgtest_a_SOURCES = \
	$(GTEST_SOURCE)/src/gtest-all.cc \
	$(GTEST_SOURCE)/src/gtest_main.cc
libgtest_a_CPPFLAGS = \
	$(GTEST_CPPFLAGS) -w
libgtest_a_CXXFLAGS = \
	$(AM_CXXFLAGS)
libgtest_a_CPPFLAGS = \
	$(AM_CPPFLAGS)

TESTS += test-gtest

test_gtest_SOURCES = \
	test-gtest.cpp
test_gtest_CPPFLAGS = \
	$(APPLET_CFLAGS) \
	$(AM_CPPFLAGS)
test_gtest_LDFLAGS = -pthread
test_gtest_LDADD = \
	$(APPLET_LIBS) \
	libgtest.a




############################################################

dist_noinst_SCRIPTS = \
	autogen.sh

DISTCHECK_CONFIGURE_FLAGS = --enable-localinstall

############################################################

dist-hook:
	@if test -d "$(top_srcdir)/.bzr"; \
		then \
			echo Creating ChangeLog && \
				( cd "$(top_srcdir)" && \
				echo '# Generated by Makefile. Do not edit.'; echo; \
				$(top_srcdir)/build-aux/missing --run bzr log --gnu-changelog ) > ChangeLog.tmp \
				&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
				|| (rm -f ChangeLog.tmp; \
					echo Failed to generate ChangeLog >&2 ); \
        else \
			echo Failed to generate ChangeLog: not a branch >&2; \
	fi
	@if test -d "$(top_srcdir)/.bzr"; \
		then \
			echo Creating AUTHORS && \
				( cd "$(top_srcdir)" && \
				echo '# Generated by Makefile. Do not edit.'; echo; \
				$(top_srcdir)/build-aux/missing --run bzr log --long --levels=0 | grep -e "^\s*author:" -e "^\s*committer:" | cut -d ":" -f 2 | cut -d "<" -f 1 | sort -u) > AUTHORS.tmp \
				&& mv -f AUTHORS.tmp $(top_distdir)/AUTHORS \
				|| (rm -f AUTHORS.tmp; \
					echo Failed to generate AUTHORS >&2 ); \
        else \
			echo Failed to generate AUTHORS: not a branch >&2; \
	fi

include $(top_srcdir)/Makefile.am.coverage

